Sun Sep  5 01:43:31 CEST 2004 (tk)
----------------------------------
  * libclamav/cvd.c: display warning if engine is outdated

Sat Sep  4 23:27:12 CEST 2004 (tk)
----------------------------------
  * libclamav/clamav.h: define set of recommended scan options (CL_STDOPT)
  * examples/ex1.c: update

Sat Sep  4 23:07:05 CEST 2004 (tk)
----------------------------------
  * clamscan: add support for special files in stdin mode

Sat Sep  4 17:46:39 CEST 2004 (tk)
----------------------------------
  * clamd: make output of VERSION compatible with clamd --version

Sat Sep  4 15:12:32 CEST 2004 (tk)
----------------------------------
  * freshclam: retry if mirrors are not fully synchronised

Fri Sep  3 22:25:52 CEST 2004 (tk)
----------------------------------
  * freshclam: fix signature counting (thanks to Tomasz Papszun)

Fri Sep  3 19:55:57 CEST 2004 (tk)
----------------------------------
  * libclamav: revert to old method of EICAR file detection

Fri Sep  3 17:00:28 BST 2004 (njh)
----------------------------------
  * libclamav:	Handle spaces in headers such as 'boundary= "foo"'. I believe
			that the space on the RHS of the = is not RFC1521,
			but Outlook Express generates them

Wed Sep  1 16:11:40 CEST 2004 (tk)
----------------------------------
  * libclamav: replace current MD5 implementation with another one

Wed Sep  1 03:32:28 CEST 2004 (tk)
----------------------------------
  * libclamav/cvd.c: display warning if loaded database is older than 7 days

Wed Sep  1 02:21:41 CEST 2004 (tk)
----------------------------------
  * etc/freshclam.conf: enable DNSDatabaseInfo by default
  * freshclam: add --no-dns option

Tue Aug 31 20:39:34 CEST 2004 (tk)
----------------------------------
  * sigtool: add support for *.hdb files in -l; include creation time in
	     seconds in cvd header
  * libclamav: do not load EICAR signature (detected with MD5 checksum in
	       daily.cvd > 472)

Tue Aug 31 13:43:11 CEST 2004 (acab)